// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GradeItem tests renders correctly 1`] = `
<div>
  <tr>
    <td>
      170201
    </td>
    <td>
      Program Structure and Algorithms
    </td>
    <td>
      4
    </td>
    <td>
      2017
    </td>
    <td>
      Fall
    </td>
    <td>
      <div>
        total: 
        A
      </div>
      <button
        class="btn btn-default  btn-sm"
      >
        Show More
      </button>
    </td>
  </tr>
</div>
`;

exports[`GradeItem tests renders correctly after button is clicked 1`] = `
<div>
  <tr>
    <td>
      170201
    </td>
    <td>
      Program Structure and Algorithms
    </td>
    <td>
      4
    </td>
    <td>
      2017
    </td>
    <td>
      Fall
    </td>
    <td>
      <div>
        total: 
        A
      </div>
      <div>
        attendance: 
        A
      </div>
      <div>
        assignment: 
        A
      </div>
      <div>
        exam: 
        A
      </div>
      <button
        class="btn btn-default  btn-sm"
      >
        Show Less
      </button>
    </td>
  </tr>
</div>
`;

exports[`GradeItem tests renders correctly after button is clicked 2`] = `
<div>
  <tr>
    <td>
      170201
    </td>
    <td>
      Program Structure and Algorithms
    </td>
    <td>
      4
    </td>
    <td>
      2017
    </td>
    <td>
      Fall
    </td>
    <td>
      <div>
        total: 
        A
      </div>
      <button
        class="btn btn-default  btn-sm"
      >
        Show More
      </button>
    </td>
  </tr>
</div>
`;
